fixed modals not going  all the way down when closing  on mobile

--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ h3 {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(100%);
+    transform: translateY(200%);
   }
 }
 
